# drission-shopping-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/caddy/: Caddyfile
deploy/cloudflared/: config.example.yml
deploy/systemd/: shopping-mcp.service
docs/: RASPBERRY_PI_CLOUDFLARE_DEPLOY.md  SECURITY.md
scripts/: install_cloudflared_pi.sh  install_pi.sh  install_systemd_pi.sh  run_quick_tunnel.sh  smoke_test.py
shopping_mcp/: __init__.py  asgi.py  browser.py  detail_extractor.py  naver_api.py  server.py  utils.py
shopping_mcp/adapters/: generic.py  naver_smartstore.py
tests/: test_adapters.py  test_browser.py  test_concurrency.py  test_detail_extractor.py  test_env_loading.py  test_security.py  test_shutdown.py  test_startup.py
